# treeWAS

./: .buildinfo  .buildinfo.bak  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  treewas.asr.html  treewas.html  treewas.tree.html  treewas.tw.html
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml
_modules/: functools.html  index.html
_modules/treewas/: asr.html  tree.html  tw.html
_sources/: index.rst.txt  modules.rst.txt  treewas.asr.rst.txt  treewas.rst.txt  treewas.tree.rst.txt  treewas.tw.rst.txt
_sources/source/: treewas.rst.txt
docs/: conf.py  requirements_docs.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  treewas.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/source/: modules.html  treewas.html
source/: modules.html  treewas.html
tests/: test_asr.py  test_treewas.py
treewas/: asr.py  tree.py  treewas.py  tw.py
